[gd_scene load_steps=4 format=3 uid="uid://cod70jap7w0p6"]

[ext_resource type="Script" uid="uid://cjo7areqf51l8" path="res://Scripts/Service_scripts/CardRandomizer.gd" id="1_s0e2e"]
[ext_resource type="FontFile" uid="uid://3x8dmhqmf8d8" path="res://Asset/font/Roundberly.ttf" id="2_gr52n"]
[ext_resource type="FontFile" uid="uid://cfwj7rg6ie5q" path="res://Asset/font/Tiny5-Regular.ttf" id="3_gr52n"]

[node name="CardRandomizer" type="Node2D"]
script = ExtResource("1_s0e2e")

[node name="SelectorUI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="SelectorUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="SelectorUI/Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -113.0
grow_horizontal = 2
grow_vertical = 0

[node name="Card" type="MarginContainer" parent="SelectorUI/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 72
theme_override_constants/margin_right = 72
theme_override_constants/margin_bottom = 12

[node name="PanelContainer2" type="PanelContainer" parent="SelectorUI/Control/VBoxContainer/Card"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Label" type="Label" parent="SelectorUI/Control/VBoxContainer/Card/PanelContainer2"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_gr52n")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
autowrap_mode = 2

[node name="Description" type="MarginContainer" parent="SelectorUI/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 72
theme_override_constants/margin_right = 72

[node name="PanelContainer2" type="PanelContainer" parent="SelectorUI/Control/VBoxContainer/Description"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Label" type="Label" parent="SelectorUI/Control/VBoxContainer/Description/PanelContainer2"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_gr52n")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
autowrap_mode = 2

[node name="tag" type="MarginContainer" parent="SelectorUI/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 72
theme_override_constants/margin_right = 72

[node name="PanelContainer2" type="PanelContainer" parent="SelectorUI/Control/VBoxContainer/tag"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Label" type="Label" parent="SelectorUI/Control/VBoxContainer/tag/PanelContainer2"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_gr52n")
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1
autowrap_mode = 2

[node name="CardGrid" type="Node2D" parent="SelectorUI"]

[node name="slot1" type="Node2D" parent="SelectorUI/CardGrid"]
position = Vector2(185, 150)

[node name="slot2" type="Node2D" parent="SelectorUI/CardGrid"]
position = Vector2(320, 150)

[node name="slot3" type="Node2D" parent="SelectorUI/CardGrid"]
position = Vector2(455, 150)
